refactor: 기존 builder 패턴에서 factory 로 수정